--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -1,8 +1,8 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   id: Build
-  args: ['build', '-t', 'europe-central2-docker.pkg.dev/$PROJECT_ID/game-config-service/test:$BRANCH_NAME-$SHORT_SHA', '.']
+  args: ['build', '-t', 'europe-central2-docker.pkg.dev/$PROJECT_ID/digital-dice/$REPO_NAME:$BRANCH_NAME-$SHORT_SHA', '.']
 images:
-- 'europe-central2-docker.pkg.dev/$PROJECT_ID/game-config-service/test:$BRANCH_NAME-$SHORT_SHA'
+- 'europe-central2-docker.pkg.dev/$PROJECT_ID/digital-dice/$REPO_NAME:$BRANCH_NAME-$SHORT_SHA'
 options:
   logging: CLOUD_LOGGING_ONLY
