--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -61,7 +61,7 @@ spec:
       containers:
       - name: game-config-service
         image: game-config-service:latest
-        imagePullPolicy: Never
+        imagePullPolicy: Always
         ports:
         - containerPort: 8000
         env:
