added inject stage

--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -5,8 +5,14 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   id: Push
   args: ['push', 'europe-central2-docker.pkg.dev/$PROJECT_ID/digital-dice/$REPO_NAME:$BRANCH_NAME-$SHORT_SHA']
-# images:
-# - 'europe-central2-docker.pkg.dev/$PROJECT_ID/digital-dice/$REPO_NAME:$BRANCH_NAME-$SHORT_SHA'
+- name: 'gcr.io/cloud-builders/docker'
+  id: Inject Envs
+  args: 
+  - '-c'
+  - |
+    sed -i "s/\$BRANCH_NAME/${BRANCH_NAME}/g" k8s/deployment.yml
+    sed -i "s/\$SHORT_SHA/${SHORT_SHA}/g" k8s/deployment.yml
+    cat k8s/deployment.yml
 - name: "gcr.io/cloud-builders/gke-deploy"
   id: Deploy
   args: 
