--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -7,6 +7,7 @@ steps:
   args: ['push', 'europe-central2-docker.pkg.dev/$PROJECT_ID/digital-dice/$REPO_NAME:$BRANCH_NAME-$SHORT_SHA']
 - name: 'gcr.io/cloud-builders/gcloud'
   id: Inject Envs
+  entrypoint: bash
   args: 
   - '-c'
   - |
