--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -72,7 +72,7 @@ spec:
         - name: DB_PORT
           value: "5432"
         - name: DB_USER
-          value: postgres
+          value: "postgres"
         - name: DB_PASS
           valueFrom:
             secretKeyRef:
