--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -73,7 +73,7 @@ spec:
           value: "5432"
         - name: DB_USER
           value: "postgres"
-        - name: DB_PASS
+        - name: DB_PASSWORD
           valueFrom:
             secretKeyRef:
               name: postgresql-postgresql-ha-postgresql
