changed service port

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -18,7 +18,7 @@ spec:
     tier: web
   ports:
   - protocol: TCP
-    port: 8000
+    port: 80
     targetPort: 8000
   type: NodePort
 ---
@@ -85,6 +85,7 @@ spec:
           value: "kubernetes.docker.internal"
         - name: REDIS_PORT
           value: "6379"
+        liveliness
         resources:
           requests:
             cpu: 100m
