--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -34,7 +34,7 @@ spec:
     - host: api.dev.digitaldicegame.com
       http:
         paths:
-          - path: /game-cs/*
+          - path: /game-cs/
             pathType: ImplementationSpecific
             backend:
               service:
@@ -89,6 +89,15 @@ spec:
           httpGet:
            path: /health
            port: 8000
+          initialDelaySeconds: 5
+          timeoutSeconds: 2
+          periodSeconds: 10
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+           path: /health
+           port: 8000
+           scheme: HTTP
           initialDelaySeconds: 5
           timeoutSeconds: 2
           periodSeconds: 10
