--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -22,7 +22,7 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 8000
-  type: NodePort
+  type: LoadBalancer
 ---
 apiVersion: networking.k8s.io/v1 
 kind: Ingress
