--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -16,7 +16,7 @@ metadata:
     cloud.google.com/neg: '{"ingress": true}'
 spec:
   selector:
-    app: game-config-pod
+    app: game-config-depl
   ports:
   - protocol: TCP
     port: 80
@@ -47,21 +47,21 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: dev
-  name: game-config-deployment
+  name: game-config-depl
   labels:
-    app: game-config-service
+    app: game-config-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: game-config-service
+      app: game-config-depl
   template:
     metadata:
       labels:
-        app: game-config-service
+        app: game-config-depl
     spec:
       containers:
-      - name: game-config-pod
+      - name: game-config-depl
         image: europe-central2-docker.pkg.dev/striking-arbor-382117/digital-dice/game-config-service:IMAGE_TAG
         imagePullPolicy: Always
         ports:
