--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -18,6 +18,8 @@ spec:
       containers:
       - name: game-config-depl
         image: registry.digitalocean.com/digital-dice/game-config:3f1d61f
+        imagePullSecrets:
+        - name: registry-digital-dice
         imagePullPolicy: Always
         ports:
         - containerPort: 8000
