--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,8 @@ name: Build and push Docker image
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - 'k8s/**'
   workflow_dispatch:
     inputs:
       version:
@@ -30,3 +32,17 @@ jobs:
 
       - name: Push image to DigitalOcean Container Registry
         run: docker push $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
+  push_to_git:
+    runs-on: ubuntu-latest
+    needs: build_and_push
+    steps:
+      - name: Checkout the repo 
+        uses: actions/checkout@v2
+      - name: Push to git
+        run: |
+          sed -i "s| image_tag | $(echo $GITHUB_SHA | head -c7)|g" k8s/deployment.yml
+          git config --global user.email "dgokadze@gmail.com"
+          git config --global user.name "GitHub Actions"
+          git add k8s/deployment.yml
+          git commit -m "Update deployment.yml"
+          git push
