--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,16 +32,12 @@ jobs:
 
       - name: Push image to DigitalOcean Container Registry
         run: docker push $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
-  push_to_git:
-    runs-on: ubuntu-latest
-    needs: build_and_push
-    steps:
-      - name: Checkout the repo 
-        uses: actions/checkout@v2
-      - name: Push to git
+
+      - name: change deployment.yml
+        run: sed -i "s|image_tag|$(echo $GITHUB_SHA | head -c7)|g" k8s/deployment.yml
+
+      - name: push to git
         run: |
-          sed -i "s| image_tag | $(echo $GITHUB_SHA | head -c7)|g" k8s/deployment.yml
-          git status
           git config --global user.email "dgokadze@gmail.com"
           git config --global user.name "GitHub Actions"
           git add k8s/deployment.yml
