--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,10 +34,13 @@ jobs:
         run: docker push $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
 
       - name: change deployment.yml
-        run: | 
-          sed -i "s| image_tag | $(echo $GITHUB_SHA | head -c7) |g" trash/deployment.yml
-          rm -rf k8s/deployment.yml
-          mv trash/deployment.yml k8s/deployment.yml
+        run: sed -i "s| image_tag | $(echo $GITHUB_SHA | head -c7) |g" trash/deployment.yml
+
+      - name: delete deployment.yml
+        run: rm -rf k8s/deployment.yml
+
+      - name: move deployment.yml    
+        run: mv trash/deployment.yml k8s/deployment.yml
 
       - name: push to git
         run: |
