--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- k8s/deployment.yml
+- deployment.yml
 
 images:
 - name: registry.digitalocean.com/digital-dice/game-config
