--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -2,6 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - deployment.yml
+- service.yml
+- ingress.yml
+- redis-secret.yml
+- db-secret.yml
 
 images:
 - name: registry.digitalocean.com/digital-dice/game-config
