--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -26,25 +26,25 @@ spec:
         env:
         - name: ENVIRONMENT
           value: "dev"
-        - name: DB_HOST
-          value: "dev-db-all-services-do-user-6051737-0.b.db.ondigitalocean.com"
-        - name: DB_PORT
-          value: "25060"
-        - name: DB_USER
-          valueFrom:
-            secretKeyRef:
-              name: db-password
-              key: username
-        - name: DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: db-password
-              key: password
-        - name: DB_NAME
-          valueFrom:
-            secretKeyRef:
-              name: db-password
-              key: database
+        # - name: DB_HOST
+        #   value: "dev-db-all-services-do-user-6051737-0.b.db.ondigitalocean.com"
+        # - name: DB_PORT
+        #   value: "25060"
+        # - name: DB_USER
+        #   valueFrom:
+        #     secretKeyRef:
+        #       name: db-password
+        #       key: username
+        # - name: DB_PASSWORD
+        #   valueFrom:
+        #     secretKeyRef:
+        #       name: db-password
+        #       key: password
+        # - name: DB_NAME
+        #   valueFrom:
+        #     secretKeyRef:
+        #       name: db-password
+        #       key: database
         - name: REDIS_HOST
           value: "kubernetes.docker.internal"
         - name: REDIS_PORT
