--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -7,12 +7,13 @@ metadata:
     cert-manager.io/cluster-issuer: letsencrypt-nginx
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
     - host: api.dev.digitaldicegame.com
       http:
         paths:
-          - path: /game-cs
+          - path: /game-cs(/|$)(.*)
             pathType: Prefix
             backend:
               service:
