--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ anyio==3.6.2
 async-timeout==4.0.2
 asyncpg==0.27.0
 attrs==22.2.0
+bcrypt==4.0.1
 cachetools==5.3.0
 certifi==2022.12.7
 cffi==1.15.1
