--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/whitelist-source-range: 95.104.120.225/32
 spec:
   rules:
     - host: api.dev.digitaldicegame.com
