--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 aiohttp==3.8.4
+aioredis==2.0.1
 aiosignal==1.3.1
+alembic==1.12.1
 anyio==3.6.2
 async-timeout==4.0.2
 asyncpg==0.27.0
@@ -13,7 +15,9 @@ click==8.1.3
 cloud-sql-python-connector==1.2.1
 cryptography==40.0.1
 databases==0.7.0
+dnspython==2.3.0
 ecdsa==0.18.0
+email-validator==1.3.1
 exceptiongroup==1.1.1
 fastapi==0.94.0
 frozenlist==1.3.3
@@ -25,7 +29,12 @@ httptools==0.5.0
 httpx==0.23.3
 idna==3.4
 iniconfig==2.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.3.0
+MarkupSafe==2.1.2
 multidict==6.0.4
+orjson==3.8.7
 packaging==23.0
 passlib==1.7.4
 pluggy==1.0.0
@@ -39,7 +48,8 @@ python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
 PyYAML==6.0
-redis==4.5.3
+redis
+rejson==0.5.6
 requests==2.28.2
 rfc3986==1.5.0
 rsa==4.9
@@ -49,6 +59,7 @@ SQLAlchemy==1.4.46
 starlette==0.26.0.post1
 tomli==2.0.1
 typing_extensions==4.5.0
+ujson==5.7.0
 urllib3==1.26.15
 uvicorn==0.21.0
 uvloop==0.17.0
